# physics-engine

./: .gitignore  AGENTS.md  BACKEND.md  BACKEND_PHYSICS_ROADMAP.md  CLAUDE.md  CODEX.md  DRONE_MODEL_SPEC.md  FRONTEND.md  README.md  UI_RECONFIGURATION_PLAN.md  dynamics.md  pyproject.toml  task-queue.md
docs/: BACKEND.md  FRONTEND.md  VISION.md  agent-workflow.md  candidate-generation.md  controlled-dynamics.md  discrete-dynamics.md  dynamics.md  event-detection.md  safety-certificates.md  symplectic-integrators.md  task-queue.md  task-template.md  verification-ir.md  verification-redesign-plan.md
engine/: __init__.py
scripts/: example_specs.py  export_verification_problems.py  generate_all_examples.py  generate_bead_on_hoop.py  generate_charged_particle.py  generate_coupled_oscillators.py  generate_crossed_eb_drift.py  generate_double_pendulum.py  generate_electromagnetic_field.py  generate_free_rigid_body.py  generate_henon_heiles.py  generate_ideal_spring.py  generate_kepler_problem.py  generate_lorenz_attractor.py  generate_manifest.py  generate_membrane.py  generate_n_body_gravity.py  generate_pendulum.py  generate_relativistic_charged_particle.py  generate_relativistic_cyclotron.py  generate_relativistic_free_particle.py  generate_relativistic_particle_in_potential.py  generate_scalar_field_density.py  generate_schwarzschild.py  generate_sphere_geodesic.py  generate_surface_geodesic.py  generate_symmetric_top.py  generate_twin_paradox.py  generate_uniform_gravity.py  generate_uniform_proper_acceleration.py  generate_variable_speed_wavefront.py  generation.py  (+4 more)
(+240 files in other folders)
