[project]
name = "physics-engine"
version = "0.1.0"
description = "A learning-oriented analytical mechanics engine with browser visualization later."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.10",
  "sympy>=1.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

